--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	</parent>
 	<groupId>com.hayden</groupId>
 	<artifactId>hm-petclinic</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<name>hm-petclinic</name>
 	<description>Petclinic project building from scratch</description>
 	<properties>
@@ -40,7 +40,7 @@
 
 	<scm>
 		<developerConnection>scm:git:git@github.com:Haydenmercer/hm-petclinic.git</developerConnection>
-		<tag>hm-petclinic-0.0.2</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 </project>
