--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -3,18 +3,18 @@
     <parent>
         <artifactId>hm-petclinic</artifactId>
         <groupId>com.hayden</groupId>
-        <version>1.1</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pet-clinic-web</artifactId>
-    <version>1.1</version>
+    <version>1.1-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <artifactId>pet-clinic-data</artifactId>
             <groupId>com.hayden</groupId>
-            <version>1.1</version>
+            <version>1.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
