Added maven release plugin. Closes #3.

--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,22 @@
 #release configuration
-#Thu Oct 28 02:36:21 BST 2021
+#Thu Oct 28 02:37:02 BST 2021
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
+project.dev.com.hayden\:pet-clinic-data=1.2-SNAPSHOT
 remoteTagging=true
+project.scm.com.hayden\:pet-clinic-data.empty=true
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=true
-completedPhase=check-poms
+project.dev.com.hayden\:pet-clinic-web=1.2-SNAPSHOT
+project.scm.com.hayden\:hm-petclinic.tag=HEAD
+completedPhase=end-release
 scm.url=scm\:git\:git@github.com\:Haydenmercer/hm-petclinic.git
+project.rel.com.hayden\:pet-clinic-web=1.1
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=true
+project.dev.com.hayden\:hm-petclinic=1.2-SNAPSHOT
+project.scm.com.hayden\:pet-clinic-web.empty=true
+scm.tag=hm-petclinic-1.1
+project.scm.com.hayden\:hm-petclinic.developerConnection=scm\:git\:git@github.com\:Haydenmercer/hm-petclinic.git
+project.rel.com.hayden\:hm-petclinic=1.1
 exec.snapshotReleasePluginAllowed=false
+project.rel.com.hayden\:pet-clinic-data=1.1
 preparationGoals=clean verify
