Removed full build from workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ workflows:
   test-only:
     jobs:
       - test
-  full-build: # This is the name of the workflow, feel free to change it to better match your workflow.
+  #full-build: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
-    jobs:
-      - clean-and-install
+   # jobs:
+   #   - clean-and-install
